# punkt

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
examples/: animated_graph.dot  demo1.dot  demo2.dot  demo3.dot  demo4.dot  demo42.dot  demo5.dot  demo6.dot  demo7.dot  demo8.dot  demo_inheritance.dot
examples/graphviz_gallery/: siblings.dot
include/punkt/: dot.hpp  dot_constants.hpp  dot_keywords.hpp  dot_tokenizer.hpp  gl_error.hpp  gl_renderer.hpp  int_types.hpp  populate_glyph_quads_with_text.hpp  punkt.h  utils.hpp
include/punkt/api/: punkt.h
include/punkt/glyph_loader/: default_font_resources.hpp  glyph_loader.hpp  psf1_loader.hpp
include/punkt/layout/: common.hpp  populate_glyph_quads_with_text.hpp
include/punkt/utils/: utils.hpp
resources/: color_map.txt
scripts/: plot_barycenter_x_distribution.py  plot_pre_post_diff_x_opt.py  visualize_edges.py  visualize_graph.py  visualize_quads.py
src/: compute_ranks.cpp  dot.cpp  dot_parser.cpp  dot_tokenizer.cpp  insert_ghost_nodes.cpp  main.cpp  order_nodes_horizontally.cpp  punkt_run.cpp  utils.cpp
src/glyph_loader/: font_parser.cpp  glyph_loader.cpp  glyph_utils.cpp  psf1_loader.cpp
src/layout/: common.cpp  compute_ranks.cpp  edge_label_layout.cpp  edge_layout.cpp  graph_layout.cpp  handle_link_nodes.cpp  initial_node_layout.cpp  insert_ghost_nodes.cpp  node_layout.cpp  optimize_node_x_positions.cpp  order_nodes_horizontally.cpp  populate_glyph_quads_with_text.cpp
src/parser/: dot_parser.cpp  dot_tokenizer.cpp
src/renderer/: gl_preprocessing.cpp  gl_renderer.cpp  struct_graph_renderer_impl.cpp
src/shaders/: arrows.frag  arrows.geom  arrows.vert  chars.frag  chars.vert  common.glsl  edges.frag  edges.geom  edges.vert  edges_bezier.geom  edges_bezier.vert  nodes.frag  nodes.geom  nodes.vert
src/shaders/glyph_loader/: ttf_cover_shader.frag  ttf_cover_shader.vert  ttf_stencil_shader.frag  ttf_stencil_shader.geom  ttf_stencil_shader.vert
tests/: test_ghost_node_insertion.cpp  test_graph_layout.cpp  test_horizontal_ordering.cpp  test_node_layout.cpp  test_parser.cpp  test_rank_assignment.cpp  test_tokenizer.cpp
